--- a/views/home.html
+++ b/views/home.html
@@ -12,36 +12,28 @@
     </head>
     <body>
         <header>
-            <div >
-                <div class="logo"> 
-                    <img src="images/logo.jpg" >
+            <section>
+                <div class="main-bar">
+                    <div class="logo"> 
+                        <img src="images/logo.jpeg" >
+                    </div>
+                    <article class="low-main-bar">
+                        <div class="burger-menu">
+                            <i class="fa-solid fa-bars"></i>
+                        </div>                    
+                            <div class="form" action="#" method="GET">
+                                <div class="input"><i class="fa fa-search"></i> Buscar productos, marcas y más</div>
+                            </div>
+                        <div class="cart">
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                    </div>
                 </div>
                 <div class="nombre" >
-                    <div> <p>The House of the rising bands</p></div>
-                </div>
-                <section class="espacio"></section>
-                <div class="cajamenu">
-                <div class="menu">
-                    <div class="burger-menu">
-                        <i class="fa fa-bars burger"></i>
+                    <div class="lema"> 
+                        <p>The House of the rising bands</p>
                     </div>
-                    <div class = 'barraBusqueda'>
-                        <input placeholder="Buscar productos o marcas" />
-                        <button>
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
-                    <div class="carrito">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                    </div>
-                </div>   
-            </div>
-                <section class="banner"> 
-                    <img class="imagen" src="images/banner.jpg" >
-                </section>
-                <p></p>
-            </div>
-           
+            </section>
         </header>
         <main class="principales">
             
