--- a/views/productCart.html
+++ b/views/productCart.html
@@ -36,7 +36,7 @@
         </header>
         <main>
            <section>
-               <h2>Carrito</h2>
+               <h2 class="titulo-carrito">Carrito</h2>
                <article class="products">
                    <img src="images/cuentito.jpg" alt="Kuelge">
                    <div class="main-article">
@@ -63,32 +63,7 @@
                  <p class="more">Más productos de la banda</p>
                 </div>
                  </div>
-                 <article class="products">
-                    <img src="images/cuentito.jpg" alt="Kuelge">
-                    <div class="main-article">
-                        <h4 class="product">Album Cuentito, El kuelgue</h4>
-                         <p class="price">$9.999</p>
-                         <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil vero pariatur porro tenetur</p>
-                         <p class="stock">Disponible</p>
-                    </div>
-                 </article>
-                 <article class="edit-products">                                        
-                         <span>
-                             <button class="trash-can"><i class="fa-solid fa-trash"></i></button>
-                         </span>
-                         <span class="quantity">
-                             <p>1</p>
-                         </span>
-                         <span>
-                             <button class="plus"><i class="fa-solid fa-plus"></i></button>
-                         </span>
-                     </article>
-                 </div>
-                 <div class="options">
-                  <p class="delete">Eliminar</p>
-                  <p class="more">Más productos de la banda</p>
-                 </div>
-                  </div>
+                 
                <div class="delivery">
                 <p>Envío: Calle Falsa 1234 locación $9.999</p>
                 <h4>Total con envío $9.999</h4>
