--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,10 +12,11 @@ body{
 main section {
     height: 100%;
     background-color: #222222;
-    position: absolute;
+    position: relative;
     width: 100%;
     color: white;
     margin-top: 22px;
+    padding: 10px;
 }
 
 
@@ -79,6 +80,123 @@ main section {
     border: 1px solid #000;
     color: #666;
     width: 10%;
+}
+
+.header nav{
+    background-color: #222222;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+}
+
+
+.nav-bar ul{
+    list-style: none;
+    margin: 0px;
+    padding: 0;
+    display: flex;
+    padding: 5px 0px;
+    justify-content: space-around;
+    
+}
+
+
+
+.hamburguesa{
+    background-color: blue;
+    color: white;
+    padding: 10px;
+    border-radius: 6px;
+    text-align: center;
+    font-size: 18px;   
+}
+
+.carrito{
+    color: white;
+    font-size: 18px;
+}
+
+
+.articulo{
+    padding: 20px
+}
+
+.contenedor{
+    display: flex;
+    flex-direction: column;
+}
+
+.contenedor #img{
+    width: 100%;
+}
+
+.contenedor .scroll{
+    display: flex;
+    flex-direction: row;
+    height: 80px;
+}
+
+.contenedor .scroll img{
+    max-height: 100%;
+}
+
+.descripcion h2{
+    margin-bottom: 0px;
+}
+
+.descripcion #disponible{
+    color: greenyellow;
+    margin-top: 0px;
+}
+
+.similares p{
+    margin: 0px;
+    padding: 10px;
+    border: black 2px solid;
+    background-color: rgb(130, 130, 247);
+    border-radius: 7px;
+    width: 90px;
+}
+
+.similares{
+    display: none;
+    margin: 0px;
+}
+
+.descripcion .boton{
+    align-items: center;
+}
+
+.register{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.registro{
+    margin: 10%;
+    border: solid 2px black;
+    border-radius: 8px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.3);
+
+}
+
+.registro p{
+    border-bottom: solid 2px black;
+    text-align: center;
+}
+
+.login{
+    margin: 10%;
+    border: solid 2px black;
+    border-radius: 8px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.3);
+
+}
+
+.login p{
+    border-bottom: solid 2px black;
+    text-align: center;
 }
 
 main section article img {
@@ -164,12 +282,16 @@ article span.quantity{
     height: 25px;
 }
 
+main.principales{
+    margin-top: 22px;
+    text-align: center;
+}
+
 .footer{
     text-align: center;
     background-color: #222222;
     color: white;
     width: 100%;
-    margin-top: 100vh;
 }
 
 .footer div{
@@ -186,10 +308,45 @@ article span.quantity{
 .footer a{
     color:white
 }
-h2{
+.titulo-carrito{
     padding: 10px;
     border: 1px solid gray;
     display: none;
+}
+
+@media(min-width:600px){
+    .contenedor{
+        flex-direction: row;
+    }
+
+    .contenedor .scroll{
+        order: -1;
+        flex-direction: column;
+        width: 15%;
+    }
+
+    .contenedor .scroll img{
+        width: 100%;
+    }
+
+    .contenedor #img{
+        width: 60%;
+    }
+
+    .contenedor .descripcion{
+        width: 25%;
+    }
+
+    .similares{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        margin-top: 30px;
+    }
+    .register{
+        display: flex;
+        flex-direction: row;
+    }
 }
     
 
@@ -220,7 +377,7 @@ h2{
 
     .edit-products{
         position: absolute;
-        top: 135px;
+        top: 29%;
         right: 15%
     }
 
@@ -293,8 +450,8 @@ h2{
      border-top: none;
      justify-content: flex-end;
      position: absolute;
-     top: 179px;
-     left: 156px;
+     top: 45%;
+     left: 165px;
     }
 
     .more{
@@ -327,5 +484,25 @@ h2{
         display: block;
     }
 
+}
+
+@media (min-width: 1000px){
+    .articulo{
+        max-width: 1000px;
+        margin: auto;
+        border-top: solid 1px #222222;;
+        border-left: solid 1px #222222;
+        border-right: solid 1px #222222;
+        margin-top: 20px
+    }
+    .register{
+        max-width: 1000px;
+        margin: auto;
+        border-left: solid 1px #222222;
+        border-right: solid 1px #222222;
+        border-top: solid 1px #222222;
+        margin-top: 22px;
+    }
+   
 }
 
