--- a/views/producto.html
+++ b/views/producto.html
@@ -4,27 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/stylesproducto.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7ffef3f02d.js" crossorigin="anonymous"></script>
-    <link href="/css/normalize.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
 
-    <header class="header">
-        <img src="/images/logo.jpeg" alt="Logo de la empresa" class="logo">
-
-        <nav class="nav-bar">
-            <ul>
-                <li><a href="#" class="hamburguesa">
-                    <i class="fa-solid fa-bars"></i>
-                </a></li>
-                <li><input class="search-bar" type="text" placeholder="Buscar"><button>GO</button></li>
-                <li><a href="#" class="carrito">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                </a></li>
-            </ul>
-        </nav>
+    <header>
+        <section>
+            <div class="main-bar">
+                <div class="logo"> 
+                    <img src="images/logo.jpeg" >
+                </div>
+                <article class="low-main-bar">
+                    <div class="burger-menu">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>                    
+                        <div class="form" action="#" method="GET">
+                            <div class="input"><i class="fa fa-search"></i> Buscar productos, marcas y más</div>
+                        </div>
+                    <div class="cart">
+                        <i class="fas fa-shopping-cart"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="nombre" >
+                <div class="lema"> 
+                    <p>The House of the rising bands</p>
+                </div>
+        </section>
     </header>
 
     
